--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,17 +21,32 @@
             android:layout_width="match_parent" android:layout_height="@dimen/app_bar_height"
             android:fitsSystemWindows="true" android:theme="@style/AppTheme.AppBarOverlay">
 
-            <android.support.design.widget.CollapsingToolbarLayout android:id="@+id/toolbar_layout"
+            <android.support.design.widget.CollapsingToolbarLayout
+                android:id="@+id/toolbar_layout"
                 android:layout_width="match_parent" android:layout_height="match_parent"
                 android:fitsSystemWindows="true" app:contentScrim="?attr/colorPrimary"
                 app:layout_scrollFlags="scroll|exitUntilCollapsed"
                 app:toolbarId="@+id/toolbar">
 
-                <android.support.v7.widget.Toolbar android:id="@+id/toolbar"
-                    android:layout_width="match_parent" android:layout_height="?attr/actionBarSize"
-                    app:layout_collapseMode="pin" app:popupTheme="@style/AppTheme.PopupOverlay" />
+                <android.support.v7.widget.Toolbar
+                    android:id="@+id/toolbar"
+                    android:layout_width="match_parent"
+                    android:layout_height="?attr/actionBarSize"
+                    app:layout_collapseMode="pin"
+                    app:popupTheme="@style/AppTheme.PopupOverlay" />
+
+                <android.support.design.widget.TabLayout
+                    android:id="@+id/tabs"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:tabSelectedTextColor="@color/colorAccent"
+                    app:tabGravity="fill"
+                    android:layout_gravity="bottom"
+                    app:tabPaddingStart="-1dp"
+                    app:tabPaddingEnd="-1dp"/>
 
             </android.support.design.widget.CollapsingToolbarLayout>
+
         </android.support.design.widget.AppBarLayout>
 
         <include layout="@layout/content_main" />
